<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newUserName"
            android:hint="@string/user_name"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/newEmail"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorPrimary"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_baseColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"/>

    </LinearLayout>

</android.support.v7.widget.CardView>