<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_blue">

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/userName"
                    android:hint="@string/user_name"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="24sp"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorPrimary"
                    android:textSize="24sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:met_baseColor="@color/colorPrimary"
                    app:met_singleLineEllipsis="true"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:id="@+id/info_login"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/sign_up"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/sign_up" />


            <Button
                android:id="@+id/sign_in"
                style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/sign_in" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>